Bug 632953 - Clear mouse capture after window resize completes. r=jimm